--- a/app/app.global.sass
+++ b/app/app.global.sass
@@ -1,8 +1,16 @@
+@import "sass/bourbon/core/bourbon"
+@import "sass/neat/app/assets/stylesheets/neat"
+@import "sass/bitters/core/base"
+@import "sass/refills/source/stylesheets/refill"
+@import "sass/refills/source/stylesheets/refills-variables"
+@import "sass/refills/source/stylesheets/refills-header"
+
+
 body
   position: relative
   height: 100vh
   background-color: white
-  font-family: Arial, Helvetica, Helvetica Neue
+  font-family: Helvetica Neue, Helvetica, sans-serif
 
 li
   list-style: none
