Add header with connection information

--- a/app/app.global.sass
+++ b/app/app.global.sass
@@ -1,9 +1,9 @@
+// @import "sass/bitters/core/base"
 @import "sass/bourbon/core/bourbon"
 @import "sass/neat/app/assets/stylesheets/neat"
-@import "sass/bitters/core/base"
-@import "sass/refills/source/stylesheets/refill"
-@import "sass/refills/source/stylesheets/refills-variables"
-@import "sass/refills/source/stylesheets/refills-header"
+// @import "sass/refills/source/stylesheets/refills-variables"
+// @import "sass/refills/source/stylesheets/refill"
+// @import "sass/refills/source/stylesheets/refills-header"
 
 
 body
@@ -11,6 +11,7 @@ body
   height: 100vh
   background-color: white
   font-family: Helvetica Neue, Helvetica, sans-serif
+  margin: 0
 
 li
   list-style: none
