Design pin list filter

--- a/app/app.global.sass
+++ b/app/app.global.sass
@@ -17,9 +17,11 @@ li
   list-style: none
 
 a
-  color: white
+  color: #333
   opacity: .75
   text-decoration: none
+
+
 
   &:hover
     opacity: 1
