--- a/app/app.global.sass
+++ b/app/app.global.sass
@@ -4,7 +4,7 @@
 // @import "sass/refills/source/stylesheets/refills-variables"
 // @import "sass/refills/source/stylesheets/refill"
 // @import "sass/refills/source/stylesheets/refills-header"
-
+@import "sass/refills/source/stylesheets/refills/_switch"
 
 body
   position: relative
