--- a/app/components/Pin.sass
+++ b/app/components/Pin.sass
@@ -1,5 +1,5 @@
 .pin
-  width: 500px
+  width: 100%
   margin: 1em
   border: 1px solid #bdc3c7
   box-sizing: border-box
@@ -17,8 +17,12 @@
 .pin__body
   padding: 0.5em
 
-.pin__footer
+.pin__settings
   padding: 0.5em
+  border-bottom: 1px solid #bdc3c7
+
+.pin__controls
+  padding: 1em
 
 .pin--digital
   .pin__header
@@ -39,3 +43,10 @@ $smallfontsize: 0.9em
   line-height: 1
   padding: 0.4em 1.2em
   margin-right: 1em
+
+select
+  border: 1px solid #666
+  border-radius: 3px
+  background: white
+  margin-left: 0.5em
+  padding: 0.2em
