Add icons to replay controls

--- a/app/components/Microcontroller.sass
+++ b/app/components/Microcontroller.sass
@@ -49,5 +49,10 @@ header
   border-top: 1px solid gray
   .controls
     padding: 1em
+    display: flex
+    .replay-controls
+      flex: 1
   .link
     margin-right: 1em
+    &:last-child
+      margin-right: 0em
