Show board icons in port selection

--- a/app/components/Home.sass
+++ b/app/components/Home.sass
@@ -2,5 +2,19 @@
   width: 400px
   margin: auto
   margin-top: 4em
+  padding: 1em
+  ul
+    padding-left: 0
+
+.port
+  margin-top: 1em
   background: #ecf0f1
   padding: 1em
+
+.port__header
+  width: 100%
+  display: block
+
+.port__image
+  height: 100px
+  padding-top: 1em
