--- a/app/components/Home.sass
+++ b/app/components/Home.sass
@@ -10,11 +10,43 @@
   margin-top: 1em
   background: #ecf0f1
   padding: 1em
-
-.port__header
   width: 100%
   display: block
 
 .port__image
   height: 100px
   padding-top: 1em
+
+
+input[type=range] 
+  -webkit-appearance: none
+  width: 100%
+  height: 32px
+
+input[type=range]:focus 
+  outline: none
+
+input[type=range]::-webkit-slider-runnable-track 
+  width: 100%
+  height: 16px
+  cursor: pointer
+  animate: 0.2s
+  background: white
+  border-radius: 32px
+  background: rgba(0, 0, 0, 0.2)
+
+input[type=range]::-webkit-slider-thumb 
+  background: white
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4)
+  cursor: pointer
+  -webkit-appearance: none
+  margin-top: -8px
+  border: 0
+  border-radius: 32px
+  cursor: pointer
+  height: 32px
+  width: 32px
+  padding: 0
+  position: relative
+  transition: all 0.3s ease
+  z-index: 0
