--- a/app/components/Pin.sass
+++ b/app/components/Pin.sass
@@ -14,6 +14,15 @@
     margin: 0
     padding: 0.2em 0.5em
     display: inline
+  a
+    color: white
+  display: flex
+  flex-direction: row
+  .pin__header__left
+    flex: 1
+  .pin__header__right
+    padding: 0.2em 0.5em
+    flex: 0 0 8ch
 
 .pin__body
   padding: 0.5em
