Restyle pin filters

--- a/app/components/Microcontroller.sass
+++ b/app/components/Microcontroller.sass
@@ -58,3 +58,14 @@ $red: #e74c3c
   margin-right: 1em
   &:last-child
     margin-right: 0em
+
+.filter-section
+  display: inline-block
+  margin-left: 1em
+  vertical-align: top
+
+.filter-description
+  display: inline-block
+  font-weight: bold
+  vertical-align: top
+
