Show multiple pins in one row

--- a/app/components/Microcontroller.sass
+++ b/app/components/Microcontroller.sass
@@ -43,6 +43,9 @@ $red: #e74c3c
   flex: 100%
   width: 100%
   overflow-y: scroll
+  display: flex
+  flex-direction: row
+  flex-wrap: wrap
 
 .replay
   flex: auto
