Increase a:hover contrast

--- a/app/app.global.sass
+++ b/app/app.global.sass
@@ -18,12 +18,9 @@ li
   list-style: none
 
 a
-  color: #333
-  opacity: .75
+  color: black
+  opacity: .6
   text-decoration: none
-
-
-
   &:hover
     opacity: 1
     text-decoration: none
