--- a/app/app.global.sass
+++ b/app/app.global.sass
@@ -13,6 +13,7 @@ body
   background-color: white
   font-family: Helvetica Neue, Helvetica, sans-serif
   margin: 0
+  overflow-y: hidden
 
 li
   list-style: none
