Gray out hidden pins

--- a/app/components/Pin.sass
+++ b/app/components/Pin.sass
@@ -33,6 +33,10 @@
 .pin__controls
   padding: 1em
 
+.pin--disabled
+  .pin__header
+    background: #bdc3c7 !important
+
 .pin--digital
   .pin__header
     background: #3498db
