Disable the replay button when a new recording is started

--- a/app/components/Microcontroller.sass
+++ b/app/components/Microcontroller.sass
@@ -58,9 +58,13 @@ $red: #e74c3c
       flex: 1
 
 .link
+  display: inline
   margin-right: 1em
   &:last-child
     margin-right: 0em
+
+.link--disabled
+  opacity: .4
 
 .filter-section
   display: inline-block
