--- a/app/components/Pin.sass
+++ b/app/components/Pin.sass
@@ -1,5 +1,5 @@
 .pin
-  flex: 0 0 500px
+  flex: 0 0 550px
   margin: 1em
   border: 1px solid #bdc3c7
   box-sizing: border-box
@@ -18,10 +18,10 @@
   display: flex
   flex-direction: row
   .pin__header__left
-    flex: 1
+    flex: 1 0 auto
   .pin__header__right
     padding: 0.2em 0.5em
-    flex: 0 0 8ch
+    flex: 0 0 auto
 
 .pin__body
   padding: 0.5em
