Increase switch contrast

--- a/app/app.global.sass
+++ b/app/app.global.sass
@@ -5,7 +5,8 @@
 // @import "sass/refills/source/stylesheets/refills-variables"
 // @import "sass/refills/source/stylesheets/refill"
 // @import "sass/refills/source/stylesheets/refills-header"
-@import "sass/refills/source/stylesheets/refills/_switch"
+@import "sass/switch"
+
 
 body
   position: relative
