--- a/app/components/Pin.sass
+++ b/app/components/Pin.sass
@@ -32,6 +32,8 @@
 
 .pin__controls
   padding: 1em
+  &:empty
+    padding: 0em
 
 .pin--disabled
   .pin__header
@@ -44,6 +46,9 @@
 .pin--analog
   .pin__header
     background: #2ecc71
+
+.visibility-controls > .fa
+  margin-right: 0.3em
 
 $smallfontsize: 0.9em
 
