--- a/app/components/Pin.sass
+++ b/app/components/Pin.sass
@@ -1,36 +1,63 @@
 .pin
-  flex: 0 0 550px
+  // flex: 0 0 550px
+  display: flex
   margin: 1em
   border: 1px solid #bdc3c7
   box-sizing: border-box
   // border-radius: .5em
 
 .pin__header
+  width: 190px
+  height: 200px
+  display: flex
+  flex-shrink: 0
+  // flex-grow: 0
+  flex-direction: column
   background: #bdc3c7
-  padding: 0.5em
   h2
     font-size: 1.3em
     margin: 0
-    padding: 0.2em 0.5em
+    padding: 0.2em
     display: inline
   a
     color: white
-  display: flex
-  flex-direction: row
   .pin__header__left
-    flex: 1 0 auto
+    display: flex
+    flex-flow: column wrap
+  .pin__modes
+    display: flex
+    flex-flow: column wrap
   .pin__header__right
-    padding: 0.2em 0.5em
-    flex: 0 0 auto
+    padding: 0.2em
+    flex: 0
 
 .pin__body
-  padding: 0.5em
+  // flex-grow: 1
+  // display: flex
+  width: 100%
+  height: 200px
+  padding: 1em
 
+.pin__code
+  width: 100%
+  height: 200px
+
+pre
+  height: 200px
+  width: 100%
+  margin: 0
+  padding: 0
+  overflow: scroll
+
+  
 .pin__settings
-  padding: 0.5em
-  border-bottom: 1px solid #bdc3c7
+  padding: 0.25em
+  // border-bottom: 1px solid #bdc3c7
 
 .pin__controls
+  text-align: center
+  vertical-align: middle
+  width: 100%
   padding: 1em
 
 .pin--disabled
@@ -45,6 +72,12 @@
   .pin__header
     background: #2ecc71
 
+#root .pin--digital .label-switch .checkbox
+    background: lighten( #3498db, 20% )
+
+#root .pin--analog .label-switch .checkbox
+  background: lighten( #2ecc71, 20% )
+
 $smallfontsize: 0.9em
 
 .pin__tag
@@ -55,7 +88,10 @@ $smallfontsize: 0.9em
   font-size: $smallfontsize
   line-height: 1
   padding: 0.4em 1.2em
-  margin-right: 1em
+  // margin-right: 1em
+  margin-top: 0.25em
+  margin-bottom: 0.25em
+  margin-left: 0.25em
 
 select
   border: 1px solid #666
@@ -68,6 +104,8 @@ input[type=range]
   -webkit-appearance: none
   width: 100%
   height: 32px
+  border: 0px
+  background: none
 
 input[type=range]:focus 
   outline: none
@@ -76,10 +114,10 @@ input[type=range]::-webkit-slider-runnable-track
   width: 100%
   height: 16px
   cursor: pointer
-  animate: 0.2s
-  background: white
   border-radius: 32px
   background: rgba(0, 0, 0, 0.2)
+  border: none
+  animate: 0.1s
 
 input[type=range]::-webkit-slider-thumb 
   background: white
