--- a/app/components/Home.sass
+++ b/app/components/Home.sass
@@ -21,4 +21,26 @@
   height: 100px
   padding-top: 1em
 
+.backdrop
+  position: fixed
+  top: 0
+  bottom: 0
+  left: 0
+  right: 0
+  background: rgba(0,0,0,0.5)
+  padding: 3em
 
+.dialog
+  position: relative
+  background: #fff
+  border-radius: 3px
+  max-width: 400px
+  min-height: 150px
+  margin: auto
+  padding: 2em
+
+.button
+  position: absolute
+  right: 0
+  bottom: 0
+  padding: 1em
