--- a/app/components/Pin.sass
+++ b/app/components/Pin.sass
@@ -21,15 +21,18 @@
     display: inline
   a
     color: white
-  .pin__header__left
-    display: flex
-    flex-flow: column wrap
+  .pin__header__right
+    margin-left: auto
+    padding: 0.2em
   .pin__modes
     display: flex
     flex-flow: column wrap
-  .pin__header__right
-    padding: 0.2em
-    flex: 0
+
+.pin__header__head
+  display: flex
+  flex-shrink: 0
+  // flex-grow: 0
+  flex-direction: line
 
 .pin__body
   // flex-grow: 1
@@ -49,7 +52,7 @@ pre
   padding: 0
   overflow: scroll
 
-  
+
 .pin__settings
   padding: 0.25em
   // border-bottom: 1px solid #bdc3c7
@@ -103,17 +106,17 @@ select
   margin-left: 0.5em
   padding: 0.2em
 
-input[type=range] 
+input[type=range]
   -webkit-appearance: none
   width: 100%
   height: 32px
   border: 0px
   background: none
 
-input[type=range]:focus 
+input[type=range]:focus
   outline: none
 
-input[type=range]::-webkit-slider-runnable-track 
+input[type=range]::-webkit-slider-runnable-track
   width: 100%
   height: 16px
   cursor: pointer
@@ -122,7 +125,7 @@ input[type=range]::-webkit-slider-runnable-track
   border: none
   animate: 0.1s
 
-input[type=range]::-webkit-slider-thumb 
+input[type=range]::-webkit-slider-thumb
   background: white
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4)
   cursor: pointer
